[gd_scene load_steps=12 format=2]

[ext_resource path="res://Actors/Scripts/Weapon.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/front-muzzle-flash.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/side-muzzle-flash.png" type="Texture" id=3]
[ext_resource path="res://Actors/Scripts/WeaponFSM.gd" type="Script" id=4]
[ext_resource path="res://Actors/Scripts/WeaponStates/Idle.gd" type="Script" id=5]
[ext_resource path="res://Actors/Scripts/WeaponStates/Firing.gd" type="Script" id=6]
[ext_resource path="res://Actors/Scripts/WeaponController.gd" type="Script" id=7]
[ext_resource path="res://Actors/Scripts/WeaponStates/Reloading.gd" type="Script" id=9]
[ext_resource path="res://Actors/Scripts/WeaponStates/Stowed.gd" type="Script" id=10]
[ext_resource path="res://Actors/Scripts/WeaponStates/Draw.gd" type="Script" id=11]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[node name="Weapon" type="Spatial"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
script = ExtResource( 1 )
ADS_POSITION = Vector3( -0.423, 0.29, 0.428 )

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( 1, 9.31323e-10, -9.31323e-10, 0, 0.3, 0, 0, -2.91038e-11, 0.3, 0, 0, 0 )
layers = 2
mesh = SubResource( 1 )
material/0 = null

[node name="Muzzle" type="Spatial" parent="Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.42109e-14, 0, 1, 0.585944, 0, 1.19209e-07 )

[node name="ShootPlayer" type="AudioStreamPlayer3D" parent="Model/Muzzle"]
transform = Transform( 1, -3.10441e-09, 3.1044e-09, 0, 3.33333, 0, 5.68434e-14, 3.23376e-10, 3.33333, -0.585944, 0, -1.19209e-07 )
unit_db = 4.0
max_distance = 250.0

[node name="MuzzleSide" type="Sprite3D" parent="Model/Muzzle"]
transform = Transform( 1, -3.10441e-09, 3.1044e-09, 0, 3.33333, 0, 2.84217e-13, 3.23376e-10, 3.33333, 0.195339, 0, 3.05082e-07 )
visible = false
texture = ExtResource( 3 )

[node name="MuzzleFront" type="Sprite3D" parent="Model/Muzzle"]
transform = Transform( -5.42991e-07, 0, 1.0016, 0, 3.33333, 0, -3.33285, 4.83331e-17, -1.63181e-07, -0.0716171, 0.341277, 1.6014e-07 )
visible = false
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.29555, 0 )
unit_db = 1.0
max_db = 4.0
max_distance = 75.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Firing" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="ROFTimer" type="Timer" parent="StateMachine/Firing"]
one_shot = true

[node name="PulseTimer" type="Timer" parent="StateMachine/Firing"]
one_shot = true

[node name="Reloading" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Stowed" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Draw" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="WeaponController" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="StateMachine/Firing/ROFTimer" to="StateMachine" method="_on_ROFTimer_timeout"]
[connection signal="timeout" from="StateMachine/Firing/PulseTimer" to="StateMachine" method="_on_PulseTimer_timeout"]
